<resources>
    <string name="app_name">OK</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create One!</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reg_create_account">CREATE ACCOUNT</string>
    <string name="lectures">Lectures</string>
    <string name="schedules">Schedules</string>
    <string name="attendance">Attendance</string>
    <string name="progress">Progress</string>
</resources>
