<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawable_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include
            android:id="@+id/main_page_toolbar"
            layout="@layout/app_bar_layout">
        </include>




        <GridLayout
            android:layout_marginTop="280dp"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:padding="10dp">

            <!-- Row One -->
            <!-- Column One -->

        <androidx.cardview.widget.CardView
            android:id="@+id/lecturessId"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">
            
            <LinearLayout
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/lectures"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lectures"
                    android:textAlignment="center"
                    android:textAppearance="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


            <!-- Column Two-->

            <androidx.cardview.widget.CardView
                android:id="@+id/schedulesId"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/schedules"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedules"
                        android:textAlignment="center"
                        android:textAppearance="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="normal"

                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- Row Two -->
            <!-- Column One -->

            <androidx.cardview.widget.CardView
                android:id="@+id/attendanceId"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/attendance"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attendance"
                        android:textAlignment="center"
                        android:textAppearance="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <!-- Column Two-->


            <androidx.cardview.widget.CardView
                android:id="@+id/progressId"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/progress"
                        android:layout_gravity="center_horizontal"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/progress"
                        android:textAlignment="center"
                        android:textAppearance="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_alignStart="@+id/main_container"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/books" />








        </FrameLayout>



    </RelativeLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginBottom="3dp"
        app:menu="@menu/navigation_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>